Added style.css and corresponding files which were modified due to introduction of css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT_RECIPES</title>
+    <link rel = "stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Odin Recipes</H1>
+    <H1 >Odin Recipes</H1>
     <br>
     <ul>
         <li><a href="../odin-recipes/recipes/chicken_wings.html" target = blank rel="noopener noreferrer">Chicken Wings</a></li>
