--- a/recipes/chicken_wings.html
+++ b/recipes/chicken_wings.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken_Wings</title>
+    <link rel = "stylesheet" href="/home/sukhraj/repos/odin-recipes/style.css" >
 </head>
 <body>
-    <h1><strong><u>Chicken Wings !!!</u></strong></h1>
+    <h1 class="heading1">Chicken Wings !!!</h1>
     <br>
-    <img src="../images/Chicken_Wings.jpeg" width = "350" height = "350">
+    <img src="../images/Chicken_Wings.jpeg" width = "400" height = auto >
     <br>
-    <h3>Description : </h3>
+    <h3 class = "heading3">Description : </h3>
     <p>Chicken wings are a popular appetizer or snack, often served fried or baked.</p>
     <p> They can be coated in a variety of sauces, such as buffalo, barbecue, or honey garlic, and are typically served with celery sticks and dipping sauces like blue cheese or ranch.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class = "heading3">Ingredients</h3>
     <ul>
         <li>Chicken wings</li>
         <li>Salt</li>
@@ -30,7 +31,7 @@
         <li>Blue cheese or ranch dressing (for dipping)</li>
     </ul>
 
-    <h3>Steps to Prepare Chicken Wings</h3>
+    <h3 class = "heading3">Steps to Prepare Chicken Wings</h3>
     <ol>
         <li>Preheat your oven to 400°F (200°C) or heat oil in a deep fryer to 375°F (190°C) if frying.</li>
         <li>Season the chicken wings with salt, black pepper, garlic powder, and paprika.</li>
