--- a/recipes/french_fries.html
+++ b/recipes/french_fries.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French_Fries</title>
+    <link rel = "stylesheet" href="/home/sukhraj/repos/odin-recipes/style.css" >
+
 </head>
 <body>
-    <H1><strong><u>French Fries !!!</u></strong></H1>
+    <h1 class="heading1">French Fries !!!</h1>
     <br>
-    <img src="../images/French_fries.jpeg" width = "350" height = "350">
+    <img src="../images/French_fries.jpeg" width = "400" height = auto>
     <br>
-    <h3>Description : </h3>
+    <h3 class = "heading3">Description : </h3>
     <p>French fries are a beloved side dish made from potatoes that are cut into strips and deep-fried until crispy.</p>
     <p>They can be seasoned with salt or various spices and are often served with ketchup, mayonnaise, or other dipping sauces.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class = "heading3">Ingredients</h3>
     <ul>
         <li>Russet potatoes</li>
         <li>Salt</li>
@@ -25,7 +27,7 @@
         <li>Other dipping sauces (optional)</li>
     </ul>
 
-    <h3>Steps to Prepare French Fries</h3>
+    <h3 class = "heading3">Steps to Prepare French Fries</h3>
     <ol>
         <li>Peel the potatoes and cut them into thin strips.</li>
         <li>Soak the potato strips in cold water for at least 30 minutes to remove excess starch.</li>
