--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburger</title>
+    <link rel = "stylesheet" href="/home/sukhraj/repos/odin-recipes/style.css" >
+
 </head>
 <body>
-    <H1><strong><u>Hamburgers !!!</u></strong></H1>
+    <h1 class="heading1">Hamburgers !!!</h1>
     <br>
-    <img src="../images/Hamburger.jpeg" width = "350" height = "350">
+    <img src="../images/Hamburger.jpeg" width = "400" height = auto>
     <br>
-    <h3>Description : </h3>
+    <h3 class = "heading3">Description : </h3>
     <p> A hamburger is a sandwich consisting of a cooked patty of ground meat, usually beef, placed inside a sliced bun. </p>
     <p>It can be topped with various ingredients such as lettuce, tomato, cheese, onions, pickles, and condiments like ketchup, mustard, and mayonnaise.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class = "heading3">Ingredients</h3>
     <ul>
         <li>Ground beef (80/20 mix for a good balance of flavor and juiciness)</li>
         <li>Black pepper & Salt</li>
@@ -30,7 +32,7 @@
         <li>Butter (for toasting the buns)</li>
     </ul>
 
-    <h3>Steps to Make a Hamburger</h3>
+    <h3 class = "heading3">Steps to Make a Hamburger</h3>
     <ol>
         <li>Preheat a grill or skillet over medium-high heat.</li>
         <li>In a bowl, season the ground beef with salt and black pepper (and other desired seasonings).</li>
