--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel = "stylesheet" href="/home/sukhraj/repos/odin-recipes/style.css" >
+
 </head>
 <body>
-    <H1><strong><u>Lasagna !!!</u></strong></H1>
+    <h1 class="heading1">Lasagna !!!</h1>
     <br>
-    <img src="../images/Lasagna.jpeg" width = "350" height = "350">
+    <img src="../images/Lasagna.jpeg" width = "400" height = auto>
     <br>
-    <h3>Description : </h3>
+    <h3 class = "heading3">Description : </h3>
     <p>Lasagna is a classic Italian dish made with layers of wide, flat pasta, meat sauce (often made with ground beef or sausage), ricotta cheese, mozzarella cheese, and a rich tomato sauce.</p>
     <p> It is baked until bubbly and golden brown on top.</p>
 
-    <h3>Ingredients</h3>
+    <h3 class = "heading3">Ingredients</h3>
     <ul>
         <li>Lasagna noodles (oven-ready or parboiled)</li>
         <li>Ground beef or Italian sausage</li>
@@ -30,7 +32,7 @@
         <li>Fresh basil or parsley, chopped (for garnish)</li>
     </ul>
 
-    <h3>Steps to Prepare Lasagna</h3>
+    <h3 class = "heading3">Steps to Prepare Lasagna</h3>
     <ol>
         <li>Preheat your oven to 375°F (190°C).</li>
         <li>In a large skillet, cook the ground beef or Italian sausage over medium heat until browned. Add chopped onion and minced garlic, cooking until softened.</li>
